add docker based jekyll server script

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Mike Croft
 markdown: kramdown
 highlighter: rouge
-gems: [jekyll-paginate]
+plugins: [jekyll-paginate]
 defaults:
     scope:
         path: ""
